Update text in aswhite-term-conditions.html

--- a/aswhite-term-conditions.html
+++ b/aswhite-term-conditions.html
@@ -7,7 +7,18 @@
         </style>
     </head>
     <body>
-        <span class="text"> Dev? Carry on ~</span>
+        <span class="text">Dev....</span>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <br />
         <br />
         <br />
