Update HTML tags in aswhite-term-conditions.html

--- a/aswhite-term-conditions.html
+++ b/aswhite-term-conditions.html
@@ -7,7 +7,7 @@
         </style>
     </head>
     <body>
-        <span class="text">Dev....</span>
+        <p class="text">Dev....</p>
         <br />
         <br />
         <br />
@@ -60,5 +60,6 @@
         <br />
         <br />
         <br />
+        <p class="text">......veD</p>
     </body>
 </html>
