Update text in aswhite-term-conditions.html

--- a/aswhite-term-conditions.html
+++ b/aswhite-term-conditions.html
@@ -74,6 +74,28 @@
         <br />
         <br />
         <br />
-        <p class="text">......veD</p>
+        <p class="text">......veD...</p>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <p class="text">.....</p>
     </body>
 </html>
