Update text in aswhite-term-conditions.html

--- a/aswhite-term-conditions.html
+++ b/aswhite-term-conditions.html
@@ -74,7 +74,7 @@
         <br />
         <br />
         <br />
-        <p class="text">......veD...</p>
+        <p class="text">.........</p>
         <br />
         <br />
         <br />
@@ -96,6 +96,6 @@
         <br />
         <br />
         <br />
-        <p class="text">.....</p>
+        <p class="text">........dev</p>
     </body>
 </html>
