Update text in aswhite-term-conditions.html

--- a/aswhite-term-conditions.html
+++ b/aswhite-term-conditions.html
@@ -7,7 +7,7 @@
         </style>
     </head>
     <body>
-        <p class="text">Dev....</p>
+        <p class="text">Làm việc bằng cái tâm. Ok?....</p>
         <br />
         <br />
         <br />
@@ -74,7 +74,6 @@
         <br />
         <br />
         <br />
-        <p class="text">.........</p>
         <br />
         <br />
         <br />
@@ -96,6 +95,6 @@
         <br />
         <br />
         <br />
-        <p class="text">........dev</p>
+        <p class="text">./.</p>
     </body>
 </html>
